--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ section .row a {
     display: block;
 }
 
+#accueil {
+    height: 40px;
+    margin: 0;
+}
+
 
 /* ------------------------------------------------------------------------- */
 
@@ -172,7 +177,6 @@ img {
     letter-spacing: 4px;
     text-transform: uppercase;
     font-weight: bold;
-    margin-bottom: 40px;
 }
 
 .navbar img {
